--- a/bower.json
+++ b/bower.json
@@ -13,5 +13,8 @@
     "loader.js": "ember-cli/loader.js#3.2.1",
     "qunit": "~1.18.0",
     "firebase": "^2.1.0"
+  },
+  "devDependencies": {
+    "bootstrap": "^4.0.0-alpha"
   }
 }
